Add directions.threshold logic to python-server
